--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Frontend Test</title>
+  <link rel="stylesheet" type="text/css" href="build/css/style.css">
 </head>
 <body>
   <h1>My Frontend Test</h1>
