--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Frontend Test</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <link href="https://unpkg.com/ionicons@4.1.1/dist/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="build/css/style.css">
 </head>
 <body>
   <h1>My Frontend Test</h1>
+  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+    <i class="icon ion-md-heart"></i> Button
+  </button>
   
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="build/app.bundle.js"></script>
 </body>
 </html>
