--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   <link href="https://unpkg.com/ionicons@4.1.1/dist/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="build/css/style.css">
 </head>
-<body>
-  <h1>My Frontend Test</h1>
-  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-    <i class="icon ion-md-heart"></i> Button
-  </button>
+<body class="app">
+  <div class="app__container mdl-grid">
+    <div class="app__container--header-container mdl-cell mdl-cell--12-col-phone mdl-cell--10-col-tablet mdl-cell--10-col-desktop mdl-cell--1-offset-desktop">
+      <App-header></App-header>
+    </div>
+    <div class="mdl-cell mdl-cell--12-col-phone mdl-cell--10-col-tablet mdl-cell--10-col-desktop mdl-cell--1-offset-desktop">
+      Content
+    </div>
+  </div>
   
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="build/app.bundle.js"></script>
