[add] content component & [fix] header tabs block & [add] followers block to header

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body class="app">
   <div class="app__container mdl-grid">
-    <div class="app__container--header-container mdl-cell mdl-cell--12-col-phone mdl-cell--10-col-tablet mdl-cell--10-col-desktop mdl-cell--1-offset-desktop">
-      <App-header></App-header>
+    <div class="header-container mdl-cell mdl-cell--12-col-phone mdl-cell--10-col-tablet mdl-cell--10-col-desktop mdl-cell--1-offset-desktop">
+      <app-header></app-header>
     </div>
-    <div class="mdl-cell mdl-cell--12-col-phone mdl-cell--10-col-tablet mdl-cell--10-col-desktop mdl-cell--1-offset-desktop">
-      Content
+    <div class="content-container mdl-cell mdl-cell--12-col-phone mdl-cell--10-col-tablet mdl-cell--10-col-desktop mdl-cell--1-offset-desktop">
+      <app-content></app-content>
     </div>
   </div>
   
